src/generated/threeboltParser.cpp

// Generated from /home/corey/code/cpp/threebolt/threebolt.g4 by ANTLR 4.13.1


#include "threeboltListener.h"
#include "threeboltVisitor.h"

#include "threeboltParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct ThreeboltParserStaticData final {
  ThreeboltParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  ThreeboltParserStaticData(const ThreeboltParserStaticData&) = delete;
  ThreeboltParserStaticData(ThreeboltParserStaticData&&) = delete;
  ThreeboltParserStaticData& operator=(const ThreeboltParserStaticData&) = delete;
  ThreeboltParserStaticData& operator=(ThreeboltParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag threeboltParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
ThreeboltParserStaticData *threeboltParserStaticData = nullptr;

void threeboltParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (threeboltParserStaticData != nullptr) {
    return;
  }
#else
  assert(threeboltParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<ThreeboltParserStaticData>(
    std::vector<std::string>{
      "program", "importStmt", "functionDecl", "parameters", "parameter", 
      "block", "statement", "variableDecl", "assignment", "returnStmt", 
      "ifStmt", "elseIfStmt", "elseStmt", "exprStmt", "expr", "functionCall", 
      "arguments", "type"
    },
    std::vector<std::string>{
      "", "'from'", "'import'", "'fn'", "'let'", "'return'", "'if'", "'else'", 
      "'true'", "'false'", "'int'", "'float'", "'char'", "'bool'", "'void'", 
      "", "", "", "", "", "", "", "", "", "'+'", "'-'", "'*'", "'/'", "'%'", 
      "'+='", "'-='", "'*='", "'/='", "'%='", "'=='", "'!='", "'<'", "'<='", 
      "'>'", "'>='", "'='", "':'", "';'", "','", "'('", "')'", "'{'", "'}'", 
      "'->'", "'::'"
    },
    std::vector<std::string>{
      "", "KEYWORD_FROM", "KEYWORD_IMPORT", "KEYWORD_FN", "KEYWORD_LET", 
      "KEYWORD_RETURN", "KEYWORD_IF", "KEYWORD_ELSE", "KEYWORD_TRUE", "KEYWORD_FALSE", 
      "KEYWORD_INT", "KEYWORD_FLOAT", "KEYWORD_CHAR", "KEYWORD_BOOL", "KEYWORD_VOID", 
      "ID", "INT_LITERAL", "FLOAT_LITERAL", "CHAR_LITERAL", "BOOL_LITERAL", 
      "STRING_LITERAL", "COMMENT", "MULTILINE_COMMENT", "WS", "PLUS", "MINUS", 
      "STAR", "DIV", "MOD", "PLUSEQ", "MINUSEQ", "STAREQ", "DIVEQ", "MODEQ", 
      "EQ", "NEQ", "LT", "LEQ", "GT", "GEQ", "ASSIGN", "COLON", "SEMICOLON", 
      "COMMA", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "ARROW", "DOUBLE_COLON"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  threeboltParserStaticData = staticData.release();
}

}

threeboltParser::threeboltParser(TokenStream *input) : threeboltParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

threeboltParser::threeboltParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  threeboltParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *threeboltParserStaticData->atn, threeboltParserStaticData->decisionToDFA, threeboltParserStaticData->sharedContextCache, options);
}

threeboltParser::~threeboltParser() {
  delete _interpreter;
}

const atn::ATN& threeboltParser::getATN() const {
  return *threeboltParserStaticData->atn;
}

std::string threeboltParser::getGrammarFileName() const {
  return "threebolt.g4";
}

const std::vector<std::string>& threeboltParser::getRuleNames() const {
  return threeboltParserStaticData->ruleNames;
}

const dfa::Vocabulary& threeboltParser::getVocabulary() const {
  return threeboltParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView threeboltParser::getSerializedATN() const {
  return threeboltParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

threeboltParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<threeboltParser::StatementContext *> threeboltParser::ProgramContext::statement() {
  return getRuleContexts<threeboltParser::StatementContext>();
}

threeboltParser::StatementContext* threeboltParser::ProgramContext::statement(size_t i) {
  return getRuleContext<threeboltParser::StatementContext>(i);
}

std::vector<threeboltParser::FunctionDeclContext *> threeboltParser::ProgramContext::functionDecl() {
  return getRuleContexts<threeboltParser::FunctionDeclContext>();
}

threeboltParser::FunctionDeclContext* threeboltParser::ProgramContext::functionDecl(size_t i) {
  return getRuleContext<threeboltParser::FunctionDeclContext>(i);
}

std::vector<threeboltParser::ImportStmtContext *> threeboltParser::ProgramContext::importStmt() {
  return getRuleContexts<threeboltParser::ImportStmtContext>();
}

threeboltParser::ImportStmtContext* threeboltParser::ProgramContext::importStmt(size_t i) {
  return getRuleContext<threeboltParser::ImportStmtContext>(i);
}


size_t threeboltParser::ProgramContext::getRuleIndex() const {
  return threeboltParser::RuleProgram;
}

void threeboltParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<threeboltListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void threeboltParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<threeboltListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any threeboltParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<threeboltVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

threeboltParser::ProgramContext* threeboltParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, threeboltParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(41);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 17592188108922) != 0)) {
      setState(39);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case threeboltParser::KEYWORD_LET:
        case threeboltParser::KEYWORD_RETURN:
        case threeboltParser::KEYWORD_IF:
        case threeboltParser::ID:
        case threeboltParser::INT_LITERAL:
        case threeboltParser::FLOAT_LITERAL:
        case threeboltParser::CHAR_LITERAL:
        case threeboltParser::BOOL_LITERAL:
        case threeboltParser::STRING_LITERAL:
        case threeboltParser::LPAREN: {
          setState(36);
          statement();
          break;
        }

        case threeboltParser::KEYWORD_FN: {
          setState(37);
          functionDecl();
          break;
        }

        case threeboltParser::KEYWORD_FROM: {
          setState(38);
          importStmt();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(43);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ImportStmtContext ------------------------------------------------------------------

threeboltParser::ImportStmtContext::ImportStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* threeboltParser::ImportStmtContext::KEYWORD_FROM() {
  return getToken(threeboltParser::KEYWORD_FROM, 0);
}

std::vector<tree::TerminalNode *> threeboltParser::ImportStmtContext::ID() {
  return getTokens(threeboltParser::ID);
}

tree::TerminalNode* threeboltParser::ImportStmtContext::ID(size_t i) {
  return getToken(threeboltParser::ID, i);
}

tree::TerminalNode* threeboltParser::ImportStmtContext::DOUBLE_COLON() {
  return getToken(threeboltParser::DOUBLE_COLON, 0);
}

tree::TerminalNode* threeboltParser::ImportStmtContext::KEYWORD_IMPORT() {
  return getToken(threeboltParser::KEYWORD_IMPORT, 0);
}

tree::TerminalNode* threeboltParser::ImportStmtContext::STAR() {
  return getToken(threeboltParser::STAR, 0);
}

tree::TerminalNode* threeboltParser::ImportStmtContext::SEMICOLON() {
  return getToken(threeboltParser::SEMICOLON, 0);
}


size_t threeboltParser::ImportStmtContext::getRuleIndex() const {
  return threeboltParser::RuleImportStmt;
}

void threeboltParser::ImportStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<threeboltListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterImportStmt(this);
}

void threeboltParser::ImportStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<threeboltListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitImportStmt(this);
}


std::any threeboltParser::ImportStmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<threeboltVisitor*>(visitor))
    return parserVisitor->visitImportStmt(this);
  else
    return visitor->visitChildren(this);
}

threeboltParser::ImportStmtContext* threeboltParser::importStmt() {
  ImportStmtContext *_localctx = _tracker.createInstance<ImportStmtContext>(_ctx, getState());
  enterRule(_localctx, 2, threeboltParser::RuleImportStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(44);
    match(threeboltParser::KEYWORD_FROM);
    setState(45);
    match(threeboltParser::ID);
    setState(46);
    match(threeboltParser::DOUBLE_COLON);
    setState(47);
    match(threeboltParser::ID);
    setState(48);
    match(threeboltParser::KEYWORD_IMPORT);
    setState(49);
    match(threeboltParser::STAR);
    setState(50);
    match(threeboltParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionDeclContext ------------------------------------------------------------------

threeboltParser::FunctionDeclContext::FunctionDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* threeboltParser::FunctionDeclContext::KEYWORD_FN() {
  return getToken(threeboltParser::KEYWORD_FN, 0);
}

tree::TerminalNode* threeboltParser::FunctionDeclContext::ID() {
  return getToken(threeboltParser::ID, 0);
}

tree::TerminalNode* threeboltParser::FunctionDeclContext::LPAREN() {
  return getToken(threeboltParser::LPAREN, 0);
}

tree::TerminalNode* threeboltParser::FunctionDeclContext::RPAREN() {
  return getToken(threeboltParser::RPAREN, 0);
}

threeboltParser::BlockContext* threeboltParser::FunctionDeclContext::block() {
  return getRuleContext<threeboltParser::BlockContext>(0);
}

threeboltParser::ParametersContext* threeboltParser::FunctionDeclContext::parameters() {
  return getRuleContext<threeboltParser::ParametersContext>(0);
}

tree::TerminalNode* threeboltParser::FunctionDeclContext::ARROW() {
  return getToken(threeboltParser::ARROW, 0);
}

threeboltParser::TypeContext* threeboltParser::FunctionDeclContext::type() {
  return getRuleContext<threeboltParser::TypeContext>(0);
}


size_t threeboltParser::FunctionDeclContext::getRuleIndex() const {
  return threeboltParser::RuleFunctionDecl;
}

void threeboltParser::FunctionDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<threeboltListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionDecl(this);
}

void threeboltParser::FunctionDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<threeboltListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionDecl(this);
}


std::any threeboltParser::FunctionDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<threeboltVisitor*>(visitor))
    return parserVisitor->visitFunctionDecl(this);
  else
    return visitor->visitChildren(this);
}

threeboltParser::FunctionDeclContext* threeboltParser::functionDecl() {
  FunctionDeclContext *_localctx = _tracker.createInstance<FunctionDeclContext>(_ctx, getState());
  enterRule(_localctx, 4, threeboltParser::RuleFunctionDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(52);
    match(threeboltParser::KEYWORD_FN);
    setState(53);
    match(threeboltParser::ID);
    setState(54);
    match(threeboltParser::LPAREN);
    setState(56);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == threeboltParser::ID) {
      setState(55);
      parameters();
    }
    setState(58);
    match(threeboltParser::RPAREN);
    setState(61);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == threeboltParser::ARROW) {
      setState(59);
      match(threeboltParser::ARROW);
      setState(60);
      type();
    }
    setState(63);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParametersContext ------------------------------------------------------------------

threeboltParser::ParametersContext::ParametersContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<threeboltParser::ParameterContext *> threeboltParser::ParametersContext::parameter() {
  return getRuleContexts<threeboltParser::ParameterContext>();
}

threeboltParser::ParameterContext* threeboltParser::ParametersContext::parameter(size_t i) {
  return getRuleContext<threeboltParser::ParameterContext>(i);
}

std::vector<tree::TerminalNode *> threeboltParser::ParametersContext::COMMA() {
  return getTokens(threeboltParser::COMMA);
}

tree::TerminalNode* threeboltParser::ParametersContext::COMMA(size_t i) {
  return getToken(threeboltParser::COMMA, i);
}


size_t threeboltParser::ParametersContext::getRuleIndex() const {
  return threeboltParser::RuleParameters;
}

void threeboltParser::ParametersContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<threeboltListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameters(this);
}

void threeboltParser::ParametersContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<threeboltListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameters(this);
}


std::any threeboltParser::ParametersContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<threeboltVisitor*>(visitor))
    return parserVisitor->visitParameters(this);
  else
    return visitor->visitChildren(this);
}

threeboltParser::ParametersContext* threeboltParser::parameters() {
  ParametersContext *_localctx = _tracker.createInstance<ParametersContext>(_ctx, getState());
  enterRule(_localctx, 6, threeboltParser::RuleParameters);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(65);
    parameter();
    setState(70);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == threeboltParser::COMMA) {
      setState(66);
      match(threeboltParser::COMMA);
      setState(67);
      parameter();
      setState(72);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParameterContext ------------------------------------------------------------------

threeboltParser::ParameterContext::ParameterContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* threeboltParser::ParameterContext::ID() {
  return getToken(threeboltParser::ID, 0);
}

tree::TerminalNode* threeboltParser::ParameterContext::COLON() {
  return getToken(threeboltParser::COLON, 0);
}

threeboltParser::TypeContext* threeboltParser::ParameterContext::type() {
  return getRuleContext<threeboltParser::TypeContext>(0);
}


size_t threeboltParser::ParameterContext::getRuleIndex() const {
  return threeboltParser::RuleParameter;
}

void threeboltParser::ParameterContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<threeboltListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParameter(this);
}

void threeboltParser::ParameterContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<threeboltListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParameter(this);
}


std::any threeboltParser::ParameterContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<threeboltVisitor*>(visitor))
    return parserVisitor->visitParameter(this);
  else
    return visitor->visitChildren(this);
}

threeboltParser::ParameterContext* threeboltParser::parameter() {
  ParameterContext *_localctx = _tracker.createInstance<ParameterContext>(_ctx, getState());
  enterRule(_localctx, 8, threeboltParser::RuleParameter);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(73);
    match(threeboltParser::ID);
    setState(74);
    match(threeboltParser::COLON);
    setState(75);
    type();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

threeboltParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* threeboltParser::BlockContext::LBRACE() {
  return getToken(threeboltParser::LBRACE, 0);
}

tree::TerminalNode* threeboltParser::BlockContext::RBRACE() {
  return getToken(threeboltParser::RBRACE, 0);
}

std::vector<threeboltParser::StatementContext *> threeboltParser::BlockContext::statement() {
  return getRuleContexts<threeboltParser::StatementContext>();
}

threeboltParser::StatementContext* threeboltParser::BlockContext::statement(size_t i) {
  return getRuleContext<threeboltParser::StatementContext>(i);
}


size_t threeboltParser::BlockContext::getRuleIndex() const {
  return threeboltParser::RuleBlock;
}

void threeboltParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<threeboltListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void threeboltParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<threeboltListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}


std::any threeboltParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<threeboltVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

threeboltParser::BlockContext* threeboltParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 10, threeboltParser::RuleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(77);
    match(threeboltParser::LBRACE);
    setState(81);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 17592188108912) != 0)) {
      setState(78);
      statement();
      setState(83);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(84);
    match(threeboltParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

threeboltParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

threeboltParser::VariableDeclContext* threeboltParser::StatementContext::variableDecl() {
  return getRuleContext<threeboltParser::VariableDeclContext>(0);
}

threeboltParser::AssignmentContext* threeboltParser::StatementContext::assignment() {
  return getRuleContext<threeboltParser::AssignmentContext>(0);
}

threeboltParser::ReturnStmtContext* threeboltParser::StatementContext::returnStmt() {
  return getRuleContext<threeboltParser::ReturnStmtContext>(0);
}

threeboltParser::IfStmtContext* threeboltParser::StatementContext::ifStmt() {
  return getRuleContext<threeboltParser::IfStmtContext>(0);
}

threeboltParser::ExprStmtContext* threeboltParser::StatementContext::exprStmt() {
  return getRuleContext<threeboltParser::ExprStmtContext>(0);
}


size_t threeboltParser::StatementContext::getRuleIndex() const {
  return threeboltParser::RuleStatement;
}

void threeboltParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<threeboltListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void threeboltParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<threeboltListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


std::any threeboltParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<threeboltVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

threeboltParser::StatementContext* threeboltParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 12, threeboltParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(91);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(86);
      variableDecl();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(87);
      assignment();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(88);
      returnStmt();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(89);
      ifStmt();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(90);
      exprStmt();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableDeclContext ------------------------------------------------------------------

threeboltParser::VariableDeclContext::VariableDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* threeboltParser::VariableDeclContext::KEYWORD_LET() {
  return getToken(threeboltParser::KEYWORD_LET, 0);
}

tree::TerminalNode* threeboltParser::VariableDeclContext::ID() {
  return getToken(threeboltParser::ID, 0);
}

tree::TerminalNode* threeboltParser::VariableDeclContext::COLON() {
  return getToken(threeboltParser::COLON, 0);
}

tree::TerminalNode* threeboltParser::VariableDeclContext::ASSIGN() {
  return getToken(threeboltParser::ASSIGN, 0);
}

threeboltParser::ExprContext* threeboltParser::VariableDeclContext::expr() {
  return getRuleContext<threeboltParser::ExprContext>(0);
}

tree::TerminalNode* threeboltParser::VariableDeclContext::SEMICOLON() {
  return getToken(threeboltParser::SEMICOLON, 0);
}

threeboltParser::TypeContext* threeboltParser::VariableDeclContext::type() {
  return getRuleContext<threeboltParser::TypeContext>(0);
}


size_t threeboltParser::VariableDeclContext::getRuleIndex() const {
  return threeboltParser::RuleVariableDecl;
}

void threeboltParser::VariableDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<threeboltListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVariableDecl(this);
}

void threeboltParser::VariableDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<threeboltListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVariableDecl(this);
}


std::any threeboltParser::VariableDeclContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<threeboltVisitor*>(visitor))
    return parserVisitor->visitVariableDecl(this);
  else
    return visitor->visitChildren(this);
}

threeboltParser::VariableDeclContext* threeboltParser::variableDecl() {
  VariableDeclContext *_localctx = _tracker.createInstance<VariableDeclContext>(_ctx, getState());
  enterRule(_localctx, 14, threeboltParser::RuleVariableDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(93);
    match(threeboltParser::KEYWORD_LET);
    setState(94);
    match(threeboltParser::ID);
    setState(95);
    match(threeboltParser::COLON);
    setState(97);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 31744) != 0)) {
      setState(96);
      type();
    }
    setState(99);
    match(threeboltParser::ASSIGN);
    setState(100);
    expr(0);
    setState(101);
    match(threeboltParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentContext ------------------------------------------------------------------

threeboltParser::AssignmentContext::AssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* threeboltParser::AssignmentContext::ID() {
  return getToken(threeboltParser::ID, 0);
}

threeboltParser::ExprContext* threeboltParser::AssignmentContext::expr() {
  return getRuleContext<threeboltParser::ExprContext>(0);
}
